--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "carens-site",
+  "name": "mental-healthcare-site-demo",
   "private": true,
   "version": "0.0.0",
   "type": "module",
